Update Claude Code project configuration
Sync CLAUDE.md with actual CI/CD pipeline structure: fix distribution
count (2 not 5), document change detection, coverage reporting, Ekstazi
caching, Zulip notifications, and gate job. Remove non-existent
qodana-scan.yml reference. Update Gremlin dependency version note.

Add productivity-focused permissions to .claude/settings.json: git push/
switch/remote, common shell utilities, Java diagnostics, /tmp access,
and GitHub MCP tools for PR reviews.

Add project-tailored code-reviewer and pr-reviewer agents with
YouTrackDB-specific review dimensions (crash safety, concurrency,
WAL correctness, API boundary checks).

Enforce commit message format (imperative summary + motivation body),
test requirements for all changes, and simplify PR template to focus
on motivation over diff restatement. Remove unused ISSUE_TEMPLATE.md.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>